# TrailBotPro

./: .gitignore  CMakeLists.txt  HowToUse.md  README.md  autonomous_scout.py  control_ui.py  drone_keyboard_teleop.py  drone_object_detector copy.py  drone_object_detector_bamboo.py  dronecontroller.cpp  dronecontroller.h  frames_2025-11-06_11.25.44.gv  frames_2025-11-06_12.23.10.gv  frames_2025-11-06_14.13.02.gv  mission_interface.cpp  mission_interface.h  package.xml  rover_controller.cpp  rover_controller.h  square_pattern_flight.py  static_camera_info_pub.cpp  tree_detector.py
41068_ignition_bringup/: CMakeLists.txt
41068_ignition_bringup/41068_ws/install/: local_setup.sh  setup.sh
41068_ignition_bringup/41068_ws/log/: latest_build
41068_ignition_bringup/install/: local_setup.sh  setup.bash  setup.sh
41068_ignition_bringup/install/41068_ignition_bringup/share/41068_ignition_bringup/: local_setup.bash  local_setup.zsh  package.sh  package.xml
41068_ignition_bringup/install/41068_ignition_bringup/share/41068_ignition_bringup/cmake/: 41068_ignition_bringupConfig.cmake
41068_ignition_bringup/install/41068_ignition_bringup/share/41068_ignition_bringup/config/: 41068.rviz
41068_ignition_bringup/install/41068_ignition_bringup/share/41068_ignition_bringup/environment/: ament_prefix_path.dsv  path.dsv
41068_ignition_bringup/install/41068_ignition_bringup/share/41068_ignition_bringup/launch/: 41068_ignition_drone.launch.py  41068_navigation.launch.py
41068_ignition_bringup/install/41068_ignition_bringup/share/41068_ignition_bringup/models/forest_plane/: model.config
41068_ignition_bringup/install/41068_ignition_bringup/share/41068_ignition_bringup/models/grass_plane/: model.sdf
41068_ignition_bringup/install/41068_ignition_bringup/share/41068_ignition_bringup/urdf/: husky.gazebo.xacro  wheel.urdf.xacro
41068_ignition_bringup/install/41068_ignition_bringup/share/41068_ignition_bringup/urdf/meshes/: bumper.dae  jpl04_arch_nosensor.stl  top_chassis.dae  top_plate.dae  wheel.dae
41068_ignition_bringup/install/41068_ignition_bringup/share/41068_ignition_bringup/urdf_drone/: model.sdf
41068_ignition_bringup/install/41068_ignition_bringup/share/41068_ignition_bringup/urdf_drone/meshes/: hull.dae  propeller_fl.dae  propeller_rr.dae
41068_ignition_bringup/install/41068_ignition_bringup/share/ament_index/resource_index/package_run_dependencies/: 41068_ignition_bringup
41068_ignition_bringup/log/: latest_build
41068_ignition_bringup/src/: drone_controller.cpp  drone_controller.h  mission_interface.cpp  mission_interface.h  rover_controller.cpp  rover_controller.h
41068_ignition_bringup/worlds/: simple_trees.sdf
config/: camera_info.yaml  gazebo_bridge.yaml  husky_nav2_params.yaml  nav2_params.yaml  parrot_nav2_params.yaml  parrot_robot_localization.yaml  parrot_slam_params.yaml  robot_localization.yaml  slam_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/41068_ignition_bringup/lib/41068_ignition_bringup/: dronecontroller  mission_interface
install/41068_ignition_bringup/share/41068_ignition_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/41068_ignition_bringup/share/41068_ignition_bringup/cmake/: 41068_ignition_bringupConfig-version.cmake  41068_ignition_bringupConfig.cmake
install/41068_ignition_bringup/share/41068_ignition_bringup/config/: 41068.rviz  gazebo_bridge.yaml  nav2_params.yaml  robot_localization.yaml  slam_params.yaml
install/41068_ignition_bringup/share/41068_ignition_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/41068_ignition_bringup/share/41068_ignition_bringup/launch/: 41068_ignition.launch.py  41068_ignition_drone.launch.py  41068_navigation.launch.py
install/41068_ignition_bringup/share/41068_ignition_bringup/models/forest_plane/: model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/models/forest_wall/: model.config  model.sdf
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf/: common_properties.urdf.xacro  husky.gazebo.xacro  husky.urdf.xacro  wheel.urdf.xacro
install/41068_ignition_bringup/share/41068_ignition_bringup/urdf_drone/: common_properties.urdf.xacro  model.config  model.sdf  parrot.gazebo.xacro  parrot.urdf.xacro
install/41068_ignition_bringup/share/41068_ignition_bringup/worlds/: large_demo.sdf  simple_trees.sdf
launch/: 41068_ignition.launch.py  41068_ignition_drone.launch.py  41068_navigation.launch.py  Test husky only launch.py  dual_sim.launch.py  parrot_nav2.launch.py  parrot_nav2_direct_launch.py  start_TrailbotPro.launch.py  trail_guardian_autonomous_explorer.launch.py  trail_guardian_dual_simplified copy 2.py  trail_guardian_dual_simplified copy.py  trail_guardian_dual_simplified.py  ui_launch.py
log/: latest_build
models/Lion_Action_Figure/: model.config  model.sdf
models/Lion_Action_Figure/meshes/: Lion.dae
models/Schleich_Lion_Action_Figure/materials/textures/: texture.png:Zone.Identifier
models/bamboo_thicket_PURPLE/: model.config  model.sdf
models/bamboo_thicket_RED/: model.config  model.sdf
models/bamboo_thicket_RED/meshes/textures/: 10434_Bamboo_Thicket_v1_Diffuse2.jpg_Zone.Identifier
models/bamboo_thicket_YELLOW/: model.config  model.sdf
models/grasspatch/: model.config:Zone.Identifier
scripts/: drone_goal_publisher.py  frame_id_relay.py  frontier_explorer.py  object_landmark_mapper.py
src/: mission_interface.cpp  mission_interface.h  rover_controller.cpp  rover_controller.h
urdf/: Original huskyurdf.md  husky.gazebo.xacro
urdf_drone/: parrot.gazebo.xacro  parrot.urdf.xacro
worlds/: forest_trail Withoutpaths.sdf  forest_trail copy.sdf  forest_trail withmuntedpaths.sdf  forest_trail.sdf  large_demo.sdf  simple_trees.sdf  test_world.sdf
ws/install/: local_setup.sh  setup.sh
ws/install/41068_ignition_bringup/share/41068_ignition_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ws/log/: latest_build  latest_list
ws/src/: 41068_ignition_bringup
(+57 files in other folders)
